.metals/.reports/metals/r_scala-toplevel-mtags_1691949675187
id: file:///C:/Users/Usuario/Desktop/hello-world/src/main/scala/TipoDeDatos.scala:[7..7) in Input.VirtualFile("file:///C:/Users/Usuario/Desktop/hello-world/src/main/scala/TipoDeDatos.scala", "object ")
file:///C:/Users/Usuario/Desktop/hello-world/src/main/scala/TipoDeDatos.scala:1: error: expected identifier; obtained eof
object 
       ^